cd/deployment-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-cooker-model-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team-cooker-model-deployment
  template:
    metadata:
      labels:
        app: team-cooker-model-deployment
    spec:
      containers:
        - name: team-cooker-app
          image: rayaberova/team_cooker:main
          imagePullPolicy: Always
          resources:
            limits:
              memory: "3Gi"
              cpu: "1000m"
            requests:
              memory: "1Gi"
              cpu: "1000m"
