cd/deployment-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: team-cooker-model-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: team-cooker-model-deployment
